feat: add optional Flink streaming engine (additive)
Add Apache Flink 1.20 as an opt-in second engine alongside Spark Thrift,
selectable via an interactive menu in deploy.sh (or ENABLE_FLINK=1). Flink
runs a continuous datagen -> Iceberg streaming job into the shared Lakekeeper
catalog + MinIO bucket (demo.market.trades_stream), committing on each
checkpoint, while Spark reads the same table — multi-engine interop on one
catalog. Additive only: Spark stays primary and runs the full V3 batch demo;
Flink SQL can't run demo.sql (no MERGE/range()/maintenance), so it's a second
engine, not a toggle.

- main.tf: count-gated flink_jobmanager + flink_taskmanager, jar staging
  (iceberg-flink-runtime + aws-bundle + flink-shaded-hadoop-2-uber)
- flink/config.yaml: cluster config (mandatory checkpointing, Java-17 opens)
- flink/sql/stream.sql: REST catalog + datagen source + streaming INSERT
- deploy.sh: select_engine menu, wait_for_flink, start_flink_stream with a
  completed-checkpoint gate (sql-client -f exits 0 even on failure)
- destroy.sh/outputs.tf/variables.tf: enable_flink var, teardown, outputs
- README: dedicated Flink section, diagram, troubleshooting

Verified end-to-end through deploy.sh on a cold catalog: count climbs
600->1600, namespace created by Flink, checkpoint completed.